# square-ar-game

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  square_ar_game.spec
.github/workflows/: build-cpp-windows-exe.yml  build-windows-exe.yml
cpp/: CMakeLists.txt  vcpkg.json
cpp/src/: main.cpp
cpp/src/app/: application.cpp  application.h
cpp/src/models/: calibration_model.h  contracts.h  enums.h  game_session_model.h  grid_model.cpp  grid_model.h  player_model.h  round_model.h
cpp/src/services/: calibration_service.cpp  calibration_service.h  camera_service.cpp  camera_service.h  debug_render_service.cpp  debug_render_service.h  detection_deduplicator.cpp  detection_deduplicator.h  floor_mapping_service.cpp  floor_mapping_service.h  game_engine_service.cpp  game_engine_service.h  interfaces.h  overlay_render_service.cpp  overlay_render_service.h  player_tracker_service.cpp  player_tracker_service.h  pose_tracking_service.cpp  pose_tracking_service.h  round_evaluator.cpp  round_evaluator.h
cpp/src/threading/: camera_worker.h  shared_state.h  vision_worker.h
cpp/src/ui/: d3d_window.cpp  d3d_window.h  debug_window.cpp  debug_window.h  operator_window.cpp  operator_window.h  projector_window.cpp  projector_window.h
cpp/src/utils/: config.cpp  config.h  constants.h  d3d_helpers.cpp  d3d_helpers.h  d3d_renderer.cpp  d3d_renderer.h  fps_tracker.h  logger.cpp  logger.h  math_helpers.h
cpp/tests/: CMakeLists.txt  test_camera_format.cpp  test_detection_deduplicator.cpp  test_floor_mapping.cpp  test_fps_tracker.cpp  test_game_engine.cpp  test_grid_model.cpp  test_player_tracker.cpp  test_round_evaluator.cpp
python/: requirements.txt  square_ar_game.spec
python/src/app/: bootstrap.py
python/src/models/: calibration_model.py  contracts.py  grid_model.py
python/src/services/: floor_mapping_service.py  round_evaluator.py
python/src/utils/: app_paths.py  image_conversion.py  logging.py
python/src/viewmodels/: __init__.py  calibration_viewmodel.py  camera_coordinator.py  debug_viewmodel.py  main_viewmodel.py
python/src/views/: debug_window.py  projector_window.py
python/src/workers/: camera_worker.py  vision_worker.py
python/tests/unit/: test_app_paths.py  test_camera_coordinator.py  test_config.py  test_constants.py  test_floor_mapping.py  test_game_engine.py  test_models.py  test_overlay_render_service.py  test_pose_tracking_service.py
src/: __init__.py  main.py
src/app/: __init__.py  bootstrap.py
src/models/: __init__.py  calibration_model.py  contracts.py  enums.py  game_session_model.py  player_model.py  round_model.py
src/services/: __init__.py  calibration_service.py  camera_service.py  debug_render_service.py  detection_deduplicator.py  floor_mapping_service.py  game_engine_service.py  overlay_render_service.py  player_tracker_service.py  pose_tracking_service.py  protocols.py
src/utils/: __init__.py  app_paths.py  config.py  constants.py
src/viewmodels/: calibration_viewmodel.py  camera_coordinator.py  config_coordinator.py  debug_viewmodel.py  game_viewmodel.py  main_viewmodel.py  projector_viewmodel.py
src/views/: __init__.py  main_window.py  projector_window.py
src/workers/: __init__.py  camera_worker.py  render_worker.py  vision_worker.py
tests/: conftest.py
tests/unit/: test_app_paths.py  test_calibration_service.py  test_camera_coordinator.py  test_camera_service.py  test_config_coordinator.py  test_debug_render_service.py  test_detection_deduplicator.py  test_floor_mapping.py  test_game_engine.py  test_image_conversion.py  test_player_tracker_service.py  test_round_evaluator.py
