[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "square-ar-game"
version = "0.1.0"
description = "Physical AR floor elimination game using PyQt6, OpenCV, and MediaPipe"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.8",
    "opencv-contrib-python>=4.11",
    "mediapipe>=0.10",
    "numpy>=2.2",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
    "pytest-cov>=6",
    "pytest-mock>=3",
    "mypy>=1.14",
    "ruff>=0.9",
]

[tool.setuptools]
packages = [
    "src",
    "src.app",
    "src.models",
    "src.viewmodels",
    "src.views",
    "src.services",
    "src.workers",
    "src.utils",
]

[tool.pyinstaller]
specpath = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["cv2.*", "mediapipe.*"]
ignore_missing_imports = true
